creusot/tests/should_fail/prusti/invalid_state/at_post_logic_spec.stderr
error: 'post can only be used in specifications of program functions
 --> at_post_logic_spec.rs:5:21
  |
5 | #[ensures(result == at_post(x))]
  |                     ^^^^^^^^^^

error: aborting due to 1 previous error

